text-align bug in EditProfile fixed'

--- a/src/components/EditProfile/EditProfile.css
+++ b/src/components/EditProfile/EditProfile.css
@@ -67,7 +67,9 @@
         position: relative;
        
 } 
-
+.EditProfile-changesSaved {
+    text-align: center;
+}
 .table td {
 width: 100px;
 }
